--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="w-full bg-red-500 min-h-500 min-h-screen">
+    <div class="w-full bg-blue-500 min-h-500 min-h-screen">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis repudiandae veniam animi culpa atque ex molestiae sapiente ipsam eligendi, dolore libero eius sequi exercitationem quidem, ratione quam consectetur? Aut, temporibus!
     </div>
 </body>
