--- a/public/index2.html
+++ b/public/index2.html
@@ -26,7 +26,7 @@
 
               
               <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav ml-auto mr-40">
+                <ul class="navbar-nav ml-auto mr-20">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="#">Article</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Magazine</a>
+                    <a class="nav-link" href="magazine.html">Magazine</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Contact Us</a>
@@ -56,20 +56,6 @@
        </div>
     </header>
 
-
-  <!-- <section class="panorama" >
-        <div class="row mt-3">
-            <div class="div-panorama w-3/4">
-                    <h1>Panorama </h1>
-                    <h2 class="isi-1">Pojok Aksi dan Informasi Bina Nusantara Malang</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, fuga dolor inventore nisi dolores neque cupiditate, molestiae corporis similique numquam fugit. Distinctio accusamus temporibus odit dolore placeat quaerat, laboriosam voluptatum.
-                    </p>
-                    <img src="images/unsplash_9LXN7hIPbcA.png" width="270" height="537" class="mr-12" alt="">
-                    <img src="images/unsplash_qWYvQMIJyfE.png" width="194" height="491" class="mr-12" alt="">
-                    <img src="images/unsplash_1_GpBh396Zk.png" width="270" height="537" class="mr-12" alt="">
-            </div>
-        </div>
-  </section> -->
 
 <div class="container">
     <div class="panorama">
