--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <title>Panorama</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 
 <body>
-    <div class="w-full bg-blue-500 min-h-500 min-h-screen">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis repudiandae veniam animi culpa atque ex molestiae sapiente ipsam eligendi, dolore libero eius sequi exercitationem quidem, ratione quam consectetur? Aut, temporibus!
+    <div class="artikel">
+        <div class="w-full h-screen bg-cover" style="">
+            <div class="py-20 text-5xl font-bold text-white lg:px-20 judul">Whats Going On ?
+                <div class="line"></div>
+            </div>
+            <!-- <div class="grid w-full grid-cols-1 gap-4 px-24 bg-artikel sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-4 "> -->
+            <div class="container">
+                <div class="flex flex-col items-start p-10 mb-4 -mx-2 -mt-14 md:flex-row">
+                    <div class="w-full mb-20 xl:w-1/4 xl:mx-10 lg:mx-5" id="card-artikel">
+                        <div class="overflow-hidden shadow-lg card-artikel">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/a-1.jpg" alt="Mountain">
+                            <div class="px-6 py-4">
+                                <div class="mb-2 text-xl font-bold title">Event</div>
+                                <p class="text-base text-gray-700">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full mb-20 xl:w-1/4 xl:mx-10 lg:mx-5" id="card-artikel">
+                        <div class="overflow-hidden shadow-lg card-artikel">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/a-2.jpg" alt="Mountain">
+                            <div class="px-6 py-4">
+                                <div class="mb-2 text-xl font-bold title">Event</div>
+                                <p class="text-base text-gray-700">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full mb-20 xl:w-1/4 xl:mx-10 lg:mx-5" id="card-artikel">
+                        <div class="overflow-hidden shadow-lg card-artikel">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/a-2.jpg" alt="Mountain">
+                            <div class="px-6 py-4">
+                                <div class="mb-2 text-xl font-bold title">Event</div>
+                                <p class="text-base text-gray-700">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full mb-20 xl:w-1/4 xl:mx-10 lg:mx-5" id="card-artikel">
+                        <div class="overflow-hidden shadow-lg card-artikel">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/a-2.jpg" alt="Mountain">
+                            <div class="px-6 py-4">
+                                <div class="mb-2 text-xl font-bold title">Mountain</div>
+                                <p class="text-base text-gray-700">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+
 </body>
 
 </html>
