--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,27 @@
             </div>
         </div>
     </div>
-
+    <main class="gallery-y-72">
+        <div class="py-6 ml-auto bg-gallery">
+            <h1 class="flex flex-col items-end text-5xl font-bold xl:py-5 pr-14 gallery-header" id="gallery-header">
+                GALLERY
+            </h1>
+        </div>
+        <!-- foto -->
+        <div class="container">
+            <div class="grid grid-cols-3">
+                <div class="w-full mx-2 sm:w-1 md:w-1/3">
+                    <img src="/public/images/artikel1.jpg" alt="" class="object-cover object-center w-full h-56 px-2 lg:w-72">
+                </div>
+                <div class="w-1/3 px-5 mx-2">
+                    <img src="/public/images/artikel1.jpg" alt="" class="object-cover object-center w-full h-56 px-2 lg:w-72">
+                </div>
+                <div class="w-1/3 px-5 mx-2">
+                    <img src="/public/images/artikel1.jpg" alt="" class="object-cover object-center w-full h-56 px-2 lg:w-72">
+                </div>
+            </div>
+        </div>
+    </main>
 
 </body>
 
