--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <title>Panorama</title>
@@ -14,19 +17,18 @@
 
 <body>
     <div class="artikel">
-        <div class="w-full h-screen bg-cover" style="">
-            <div class="py-20 text-5xl font-bold text-white lg:px-20 judul">Whats Going On ?
-                <div class="line"></div>
-            </div>
-            <!-- <div class="grid w-full grid-cols-1 gap-4 px-24 bg-artikel sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-4 "> -->
-            <div class="container">
-                <div class="flex flex-col items-start p-10 mb-4 -mx-2 -mt-14 md:flex-row">
+        <div class="mx-auto md:container">
+            <div class="object-cover w-full min-h-screen bg-cover" style="background-image: url('/public/images/wave.png') ">
+                <div class="py-20 text-5xl font-bold text-white lg:px-20 judul">Whats Going On ?
+                    <div class="line "></div>
+                </div>
+                <div class="flex flex-col items-start p-5 mb-4 -mt-14 md:flex-row">
                     <div class="w-full mb-20 xl:w-1/4 xl:mx-10 lg:mx-5" id="card-artikel">
                         <div class="overflow-hidden shadow-lg card-artikel">
                             <img class="object-cover object-center w-full h-56 " src="/public/images/a-1.jpg" alt="Mountain">
                             <div class="px-6 py-4">
                                 <div class="mb-2 text-xl font-bold title">Event</div>
-                                <p class="text-base text-gray-700">
+                                <p class="text-base font-bold text-gray-700">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
                                 </p>
                             </div>
@@ -37,7 +39,7 @@
                             <img class="object-cover object-center w-full h-56 " src="/public/images/a-2.jpg" alt="Mountain">
                             <div class="px-6 py-4">
                                 <div class="mb-2 text-xl font-bold title">Event</div>
-                                <p class="text-base text-gray-700">
+                                <p class="text-base font-bold text-gray-700">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
                                 </p>
                             </div>
@@ -48,7 +50,7 @@
                             <img class="object-cover object-center w-full h-56 " src="/public/images/a-2.jpg" alt="Mountain">
                             <div class="px-6 py-4">
                                 <div class="mb-2 text-xl font-bold title">Event</div>
-                                <p class="text-base text-gray-700">
+                                <p class="text-base font-bold text-gray-700">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
                                 </p>
                             </div>
@@ -59,7 +61,7 @@
                             <img class="object-cover object-center w-full h-56 " src="/public/images/a-2.jpg" alt="Mountain">
                             <div class="px-6 py-4">
                                 <div class="mb-2 text-xl font-bold title">Mountain</div>
-                                <p class="text-base text-gray-700">
+                                <p class="text-base font-bold text-gray-700">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
                                 </p>
                             </div>
@@ -69,28 +71,119 @@
             </div>
         </div>
     </div>
-    <main class="gallery-y-72">
+    <section class="h-screen gallery-y-72">
         <div class="py-6 ml-auto bg-gallery">
-            <h1 class="flex flex-col items-end text-5xl font-bold xl:py-5 pr-14 gallery-header" id="gallery-header">
-                GALLERY
-            </h1>
         </div>
+        <h1 class="flex flex-col mr-12 text-5xl font-bold lg:items-end xl:py-5 gallery-header" id="gallery-header">
+            Gallery
+        </h1>
+        <div class=" line-2"></div>
         <!-- foto -->
-        <div class="container">
-            <div class="grid grid-cols-3">
-                <div class="w-full mx-2 sm:w-1 md:w-1/3">
-                    <img src="/public/images/artikel1.jpg" alt="" class="object-cover object-center w-full h-56 px-2 lg:w-72">
+        <div class="flex items-center justify-center foto">
+            <div class="grid gap-16 p-5 md:mt-10 sm:mx-40 sm:px-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <div class="w-full">
+                    <img src="/public/images/a-1.jpg" alt="" class="object-cover object-center w-full h-72" id="foto-gallery">
                 </div>
-                <div class="w-1/3 px-5 mx-2">
-                    <img src="/public/images/artikel1.jpg" alt="" class="object-cover object-center w-full h-56 px-2 lg:w-72">
+                <div class="w-full">
+                    <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
                 </div>
-                <div class="w-1/3 px-5 mx-2">
-                    <img src="/public/images/artikel1.jpg" alt="" class="object-cover object-center w-full h-56 px-2 lg:w-72">
+                <div class="w-full">
+                    <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
+                </div>
+                <div class="w-full">
+                    <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
+                </div>
+                <div class="w-full">
+                    <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
+                </div>
+                <div class="w-full">
+                    <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
                 </div>
             </div>
         </div>
-    </main>
+    </section>
+    <!-- end -->
+
+    <!-- magazine -->
+    <section class="min-h-screen mt-5">
+        <h1 class="text-6xl font-bold text-center">Our Magazine</h1>
+        <div class="mt-3 ml-auto mr-auto line-3"></div>
+        <p class="mt-5 ml-auto mr-auto text-sm font-bold text-center text-black md:max-w-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias rem dignissimos autem officiis repellat error tempora. consectetur adipisicing elit. </p>
+        <!-- list-magazine -->
+        <div class="flex items-center justify-center foto">
+            <div class="grid gap-16 p-5 md:mt-20 sm:mx-40 sm:px-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                <div class="w-full">
+                    <img src="/public/images/majalah1.png" alt="" class="object-cover object-center w-full h-72" id="list-magazine">
+                    <p class="mt-3 text-sm font-bold text-center text-black">Vol.2<br> Brand New You
+                    </p>
+                </div>
+                <div class="w-full">
+                    <img src="/public/images/majalah2.png" alt="" class="object-cover object-center w-full h-72" id="list-magazine">
+                    <p class="mt-3 text-sm font-bold text-center text-black">Vol.3<br>Heroes
+                    </p>
+                </div>
+                <div class="w-full">
+                    <img src="/public/images/majalah3.png" alt="" class="object-cover object-center w-full h-72" id="list-magazine">
+                    <p class="mt-3 text-sm font-bold text-center text-black">Vol.4<br>A Year-End Habbit
+                    </p>
+                </div>
+                <div class="w-full">
+                    <img src="/public/images/majalah4.png" alt="" class="object-cover object-center w-full h-72" id="list-magazine">
+                    <p class="mt-3 text-sm font-bold text-center text-black">Vol.5<br>A New Semester
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-end">
+            <button class="px-4 py-2 mr-20 font-bold text-white rounded-full hover:bg-blue-700">
+                View More
+            </button>
+        </div>
+    </section>
+    <!-- end magazine -->
 
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4">
+            <img src="/public/images/artikel1.jpg" alt=""
+                class="object-cover object-center lg:ml-auto lg:w-80 img-responsive" id="foto-gallery">
+        </div>
+        <div class="col-lg-4">
+            <img src="/public/images/artikel2.jpg" alt=""
+                class="object-cover object-center mx-20 img-responsive lg:w-80" id="foto-gallery">
+        </div>
+        <div class="col-lg-4">
+            <img src="/public/images/artikel3.jpg" alt=""
+                class="object-cover object-center w-full mr-auto img-responsive lg:w-80" id="foto-gallery">
+        </div>
+        <div class="py-5 col-lg-4">
+            <img src="/public/images/artikel1.jpg" alt=""
+                class="object-cover object-center w-full lg:ml-auto lg:w-80 img-responsive" id="foto-gallery">
+        </div>
+        <div class="py-5 col-lg-4">
+            <img src="/public/images/artikel2.jpg" alt=""
+                class="object-cover object-center mx-20 img-responsive lg:w-80" id="foto-gallery">
+        </div>
+        <div class="py-5 col-lg-4">
+            <img src="/public/images/artikel3.jpg" alt=""
+                class="object-cover object-center w-full lg:mr-auto img-responsive lg:w-80" id="foto-gallery">
+        </div>
+        <div class="d-flex justify-content-center">
+        </div>
+    </div>
+</div> -->
