benerin footer dkit

--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
     </div>
 
     <div class="container organization">
-        <div class="row ">
+        <div class="row text-center">
             <div class="col-lg-8"></div>
             <div class="col-lg-4">
                 <h1 class="">Organization <span>Structure</span> </h1>
