dah bener semua center

--- a/public/index.html
+++ b/public/index.html
@@ -74,10 +74,10 @@
                     </p>
                 </div>
                 <div class="col-lg-1"></div>
-                <div class=" foto col-lg-7 d-flex justify-content-around">
-                    <img src="images/unsplash_9LXN7hIPbcA.png" alt="" class="foto-1">
-                    <img src="images/unsplash_qWYvQMIJyfE.png" id="foto-tengah" alt="">
-                    <img src="images/unsplash_1_GpBh396Zk.png" alt="" class="foto-3">
+                <div class=" foto-panorama col-lg-7 d-flex justify-content-around">
+                    <img src="images/unsplash_9LXN7hIPbcA.png" alt="" class="foto-pertama">
+                    <img src="images/unsplash_qWYvQMIJyfE.png" id="foto-kedua" alt="">
+                    <img src="images/unsplash_1_GpBh396Zk.png" alt="" class="foto-ketiga">
                 </div>
                 <!-- <div class="photo col-lg-6">
             <img src="images/unsplash_9LXN7hIPbcA.png" alt="" class="foto-1">
@@ -204,8 +204,8 @@
         </div>
     </div>
     <!-- gallery -->
-    <section class="h-screen gallery-y-72">
-        <div class="py-6 ml-auto bg-gallery">
+    <section class="h-screen gallery-y-72 ">
+        <div class="py-6 ml-auto  bg-gallery">
         </div>
         <h1 class="flex flex-col text-5xl font-bold lg:items-end xl:py-5 gallery-header md:mr-12" id="gallery-header">
             Gallery
