perbaikan dkit di css

--- a/public/index.html
+++ b/public/index.html
@@ -116,31 +116,65 @@
                 <div class="line-color"></div>
             </div>
         </div>
-        <div class="mt-5 row">
+        <div class="mt-5">
 
-            <div class="text-center col-lg-12 ">
-                <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
+            <!-- <div class="row text-center">
+                <div class="col-md-12 mb-12">
+                    <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
+                    <h4>Atha</h4>
+                    <p>Chief of Panorma Binus Malang</p>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="row text-center">
+                    <div class="col-md-3 mb-3">
+                        <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
+                        <h4>Atha</h4>
+                        <p>Chief of Panorma Binus Malang</p>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
+                        <h4>Atha</h4>
+                        <p>Chief of Panorma Binus Malang</p>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
+                        <h4>Atha</h4>
+                        <p>Chief of Panorma Binus Malang</p>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
+                        <h4>Atha</h4>
+                        <p>Chief of Panorma Binus Malang</p>
+                    </div>
+                </div>
+            </div> -->
+
+          
+
+            <div class="text-center col-md-12 mb-12">
+                <img src="images/atha.png" width="178" class="mx-auto img-fluid"alt="">
                 <h4>Atha</h4>
                 <p>Chief of Panorma Binus Malang</p>
             </div>
             <div class="mt-5 row">
-                <div class="text-center col-lg-3">
-                    <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
+                <div class="text-center col-md-3 mb-3">
+                    <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
                     <h4>Leonardo Wijaya</h4>
                     <p>Chief of Photography Division </p>
                 </div>
-                <div class="text-center col-lg-3">
-                    <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
+                <div class="text-center col-md-3 mb-3">
+                    <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
                     <h4>Rhemzy Putra M</h4>
                     <p>Chief of Illustrator Division </p>
                 </div>
-                <div class="text-center col-lg-3">
-                    <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
+                <div class="text-center col-md-3 mb-3">
+                    <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
                     <h4>Azalea Nottingham</h4>
                     <p>Chief of Reporter Division </p>
                 </div>
-                <div class="text-center col-lg-3">
-                    <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
+                <div class="text-center col-md-3 mb-3">
+                    <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
                     <h4>Gloria Angela</h4>
                     <p>Chief of Social Media Division </p>
                 </div>
@@ -152,7 +186,7 @@
         <div class="mx-auto md:container">
             <div class="object-cover w-full min-h-screen bg-cover" style="background-image: url('/public/images/wave.png') ">
                 <div id="judul" class="text-5xl font-bold text-white md:py-20 md:px-20 judul">Whats Going On ?
-                    <div class="line "></div>
+                    <div class="line-custom"></div>
                 </div>
                 <div class="flex flex-col items-start p-5 -mt-20 md:flex-row">
                     <div class="w-full mb-20 md:w-1/4 md:mx-5" id="card-artikel">
