--- a/public/artikel-detail.html
+++ b/public/artikel-detail.html
@@ -114,7 +114,7 @@
     <!-- footer -->
     <footer class="flex mt-16 footer justify-items-start">
         <div class="container" id="item-footer">
-            <div class="grid grid-flow-col grid-rows-2 gap-4 ">
+            <div class="grid grid-flow-col gap-4 ">
                 <div class="md:col-span-3">
                     <div class="flex logo sm: justify-items-center">
                         <img src="/public/images/icon_header.png" class="logo-footer">
