--- a/public/artikel.html
+++ b/public/artikel.html
@@ -14,6 +14,7 @@
     <title>Panorama</title>
     <link rel="stylesheet" type="text/css" href="css/artikel.css">
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Artikel</title>
 </head>
@@ -146,7 +147,7 @@
     <!-- footer -->
     <footer class="flex mt-56 footer justify-items-start">
         <div class="container" id="item-footer">
-            <div class="grid grid-flow-col grid-rows-2 gap-4 ">
+            <div class="grid grid-flow-col gap-4 ">
                 <div class="md:col-span-3">
                     <div class="flex logo sm: justify-items-center">
                         <img src="/public/images/icon_header.png" class="logo-footer">
