--- a/public/artikel-detail.html
+++ b/public/artikel-detail.html
@@ -12,8 +12,11 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <title>Panorama</title>
     <link rel="stylesheet" type="text/css" href="css/detail-artikel.css">
-    <link rel="stylesheet" type="text/css" href="css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link rel="stylesheet" type="text/css" href="css/style2.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="stylesheet" type="text/css" href="css/navbar.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Article</title>
 </head>
@@ -112,9 +115,9 @@
     </div>
 
     <!-- footer -->
-    <footer class="flex mt-16 footer justify-items-start">
+    <footer class="flex mt-56 footer justify-items-start">
         <div class="container" id="item-footer">
-            <div class="grid grid-flow-col gap-4 ">
+            <div class="grid grid-flow-col gap-4 md:mt-6">
                 <div class="md:col-span-3">
                     <div class="flex logo sm: justify-items-center">
                         <img src="/public/images/icon_header.png" class="logo-footer">
