--- a/public/artikel.html
+++ b/public/artikel.html
@@ -12,9 +12,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <title>Panorama</title>
-    <link rel="stylesheet" type="text/css" href="css/artikel.css">
-    <link rel="stylesheet" type="text/css" href="css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link rel="stylesheet" type="text/css" href="css/style2.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="stylesheet" type="text/css" href="css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="css/artikel.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Artikel</title>
 </head>
@@ -36,7 +39,7 @@
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="ml-auto mr-20 navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">About Us</a>
@@ -147,7 +150,7 @@
     <!-- footer -->
     <footer class="flex mt-56 footer justify-items-start">
         <div class="container" id="item-footer">
-            <div class="grid grid-flow-col gap-4 ">
+            <div class="grid grid-flow-col gap-4 md:mt-6">
                 <div class="md:col-span-3">
                     <div class="flex logo sm: justify-items-center">
                         <img src="/public/images/icon_header.png" class="logo-footer">
