--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <link rel="stylesheet" type="text/css" href="css/style2.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="stylesheet" type="text/css" href="css/navbar.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
@@ -43,7 +45,7 @@
                                 <a class="nav-link" href="#">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Article</a>
+                                <a class="nav-link" href="artikel.html">Article</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="magazine.html">Magazine</a>
@@ -152,28 +154,28 @@
 
           
 
-            <div class="text-center col-md-12 mb-12">
-                <img src="images/atha.png" width="178" class="mx-auto img-fluid"alt="">
+            <div class="text-center col-md-3 mb-3 mx-auto d-block">
+                <img src="images/atha.png" width="178px" class="img-fluid mx-auto"alt="">
                 <h4>Atha</h4>
                 <p>Chief of Panorma Binus Malang</p>
             </div>
             <div class="mt-5 row">
-                <div class="text-center col-md-3 mb-3">
+                <div class="text-center col-md-3 mb-3 d-block">
                     <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
                     <h4>Leonardo Wijaya</h4>
                     <p>Chief of Photography Division </p>
                 </div>
-                <div class="text-center col-md-3 mb-3">
+                <div class="text-center col-md-3 mb-3 d-block">
                     <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
                     <h4>Rhemzy Putra M</h4>
                     <p>Chief of Illustrator Division </p>
                 </div>
-                <div class="text-center col-md-3 mb-3">
+                <div class="text-center col-md-3 mb-3 d-block">
                     <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
                     <h4>Azalea Nottingham</h4>
                     <p>Chief of Reporter Division </p>
                 </div>
-                <div class="text-center col-md-3 mb-3">
+                <div class="text-center col-md-3 mb-3 d-block">
                     <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
                     <h4>Gloria Angela</h4>
                     <p>Chief of Social Media Division </p>
@@ -183,7 +185,7 @@
     </div>
 
     <div class="artikel">
-        <div class="mx-auto md:container">
+        <div class="mx-auto sm:container">
             <div class="object-cover w-full min-h-screen bg-cover" style="background-image: url('/public/images/wave.png') ">
                 <div id="judul" class="text-5xl font-bold text-white md:py-20 md:px-20 judul">Whats Going On ?
                     <div class="line-custom"></div>
@@ -237,6 +239,8 @@
             </div>
         </div>
     </div>
+
+
     <!-- gallery -->
     <section class="h-screen gallery-y-72 ">
         <div class="py-6 ml-auto  bg-gallery">
@@ -309,18 +313,20 @@
     </section>
     <!-- end magazine -->
     <!-- footer -->
-    <footer class="flex footer justify-items-start ">
+    <footer class="flex mt-56 footer justify-items-start">
         <div class="container" id="item-footer">
-            <div class="row">
-                <div class="md:px-20">
+            <div class="grid grid-flow-col gap-4 md:mt-6">
+                <div class="md:col-span-3">
                     <div class="flex logo sm: justify-items-center">
                         <img src="/public/images/icon_header.png" class="logo-footer">
                     </div>
                     <div class="item">
                         <h5 class="mt-3 text-black kontak">Binus University 2024</h5>
                         <h5 class="mt-3 text-black kontak">School of Computer Science</h5>
-                        <h5 class="mt-3 font-bold text-black kontak md:mb-3">Kontak Kami</h5>
                     </div>
+                </div>
+                <div class="md:row-span-3 ">
+                    <h5 class="mt-3 font-bold text-black kontak md:mb-3">Kontak Kami</h5>
                     <div class="flex sosmed" id="sosmed">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path
@@ -344,7 +350,6 @@
             </div>
         </div>
     </footer>
-
 
     <!-- javascript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
