--- a/public/magazine.html
+++ b/public/magazine.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/style2.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link rel="stylesheet" type="text/css" href="css/style2.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="stylesheet" type="text/css" href="css/navbar.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
@@ -38,10 +40,10 @@
                     <a class="nav-link" href="#">Gallery</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Article</a>
+                    <a class="nav-link" href="artikel.html">Article</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Magazine</a>
+                    <a class="nav-link" href="magazine.html">Magazine</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Contact Us</a>
@@ -123,18 +125,20 @@
     </section>
 
 
-    <footer class="flex footer justify-items-start ">
+    <footer class="flex mt-56 footer justify-items-start">
         <div class="container" id="item-footer">
-            <div class="row">
-                <div class="md:px-20">
+            <div class="grid grid-flow-col gap-4 md:mt-6">
+                <div class="md:col-span-3">
                     <div class="flex logo sm: justify-items-center">
                         <img src="/public/images/icon_header.png" class="logo-footer">
                     </div>
                     <div class="item">
                         <h5 class="mt-3 text-black kontak">Binus University 2024</h5>
                         <h5 class="mt-3 text-black kontak">School of Computer Science</h5>
-                        <h5 class="mt-3 font-bold text-black kontak md:mb-3">Kontak Kami</h5>
                     </div>
+                </div>
+                <div class="md:row-span-3 ">
+                    <h5 class="mt-3 font-bold text-black kontak md:mb-3">Kontak Kami</h5>
                     <div class="flex sosmed" id="sosmed">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path
