link navbar dan nyatuin css

--- a/public/artikel-detail.html
+++ b/public/artikel-detail.html
@@ -38,19 +38,19 @@
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="ml-auto mr-20 navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About Us</a>
+                                <a class="nav-link" href="index.html/about-us">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Gallery</a>
+                                <a class="nav-link" href="#artikel">Article</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Article</a>
+                                <a class="nav-link" href="#gallery">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="magazine.html">Magazine</a>
+                                <a class="nav-link" href="#magazine">Magazine</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact Us</a>
