--- a/public/artikel.html
+++ b/public/artikel.html
@@ -42,16 +42,16 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About Us</a>
+                                <a class="nav-link" href="index.html#about-us">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Gallery</a>
+                                <a class="nav-link" href="index.html#artikel">Article</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Article</a>
+                                <a class="nav-link" href="index.html#gallery">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="magazine.html">Magazine</a>
+                                <a class="nav-link" href="index.html#magazine">Magazine</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact Us</a>
@@ -146,6 +146,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- footer -->
     <footer class="flex mt-56 footer justify-items-start">
