--- a/public/index.html
+++ b/public/index.html
@@ -36,19 +36,19 @@
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="ml-auto mr-20 navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About Us</a>
+                                <a class="nav-link" href="index.html#about-us">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Gallery</a>
+                                <a class="nav-link" href="index.html#artikel">Article</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="artikel.html">Article</a>
+                                <a class="nav-link" href="index.html#gallery">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="magazine.html">Magazine</a>
+                                <a class="nav-link" href="index.html#magazine">Magazine</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact Us</a>
@@ -69,7 +69,7 @@
         <div class="panorama">
             <div class="row">
                 <div class="col-lg-4">
-                    <h1 class="mt-5">Panorama </h1>
+                    <h1 class="mt-5">Panorama</h1>
                     <h2 class="isi-1">Pojok Aksi dan Informasi Bina Nusantara Malang</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, fuga dolor inventore nisi dolores neque cupiditate, molestiae corporis similique numquam fugit. Distinctio accusamus temporibus odit dolore placeat quaerat, laboriosam
                         voluptatum.
@@ -91,7 +91,7 @@
     </div>
 
 
-    <div class="container about">
+    <div class="container about" id="about-us">
         <div>
             <div class="row">
                 <div class="mt-5 col-lg-5">
@@ -155,7 +155,7 @@
           
 
             <div class="text-center col-md-3 mb-3 mx-auto d-block">
-                <img src="images/atha.png" width="178px" class="img-fluid mx-auto"alt="">
+                <img src="images/atha.png" width="178px" class="img-fluid mx-auto "alt="">
                 <h4>Atha</h4>
                 <p>Chief of Panorma Binus Malang</p>
             </div>
@@ -184,8 +184,8 @@
         </div>
     </div>
 
-    <div class="artikel">
-        <div class="mx-auto sm:container">
+    <div class="artikel" id="artikel">
+        <div class="mx-auto sm:containe artikel-bg">
             <div class="object-cover w-full min-h-screen bg-cover" style="background-image: url('/public/images/wave.png') ">
                 <div id="judul" class="text-5xl font-bold text-white md:py-20 md:px-20 judul">Whats Going On ?
                     <div class="line-custom"></div>
@@ -236,13 +236,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="d-flex justify-content-end md:mb-10">
+                    <button class="px-4 py-2 font-bold text-white rounded-full md:mr-20 hover:bg-blue-700" id="btn-magazine"  >
+                        <a href="artikel.html" class="link-light">View More</a>
+                    </button>
+                </div>
             </div>
+        
         </div>
     </div>
 
 
     <!-- gallery -->
-    <section class="h-screen gallery-y-72 ">
+    <section class="h-screen gallery-y-72 " id="gallery">
         <div class="py-6 ml-auto  bg-gallery">
         </div>
         <h1 class="flex flex-col text-5xl font-bold lg:items-end xl:py-5 gallery-header md:mr-12" id="gallery-header">
@@ -306,8 +312,8 @@
             </div>
         </div>
         <div class="d-flex justify-content-end md:mb-10">
-            <button class="px-4 py-2 font-bold text-white rounded-full md:mr-20 hover:bg-blue-700">
-                View More
+            <button class="px-4 py-2 font-bold text-white rounded-full md:mr-20 hover:bg-blue-700" id="btn-magazine">
+                <a href="magazine.html" class="link-light">View More</a>
             </button>
         </div>
     </section>
