perbaikan footer dan magazine yg resposive naik

--- a/public/artikel.html
+++ b/public/artikel.html
@@ -92,8 +92,8 @@
             </div>
 
             <!-- more artikel -->
-            <div class="h-64 mt-20 more-article sm:space-y-10">
-                <div class="grid grid-flow-col grid-rows-3 gap-4">
+            <div class="mt-20 md:h-64 more-article sm:space-y-10">
+                <div class="grid-flow-col grid-rows-3 gap-4 md:grid">
                     <div class="md:row-span-3 ">
                         <img src="/public/images/artikel1.jpg" class="w-full md:w-3/4 rounded-xl">
                         <div class="max-w-xs mt-2 font-bold text-md caption-articel-1 ">
@@ -149,11 +149,11 @@
 
 
     <!-- footer -->
-    <footer class="flex mt-56 footer justify-items-start">
+    <footer class="flex mt-10 md:mt-56 footer justify-items-start">
         <div class="container" id="item-footer">
-            <div class="grid grid-flow-col gap-4 md:mt-6">
+            <div class="grid gap-4 md:grid-flow-col md:mt-6">
                 <div class="md:col-span-3">
-                    <div class="flex logo sm: justify-items-center">
+                    <div class="flex logo justify-items-center">
                         <img src="/public/images/icon_header.png" class="logo-footer">
                     </div>
                     <div class="item">
@@ -162,7 +162,7 @@
                     </div>
                 </div>
                 <div class="md:row-span-3 ">
-                    <h5 class="mt-3 font-bold text-black kontak md:mb-3">Kontak Kami</h5>
+                    <h5 class="font-bold text-black md:mt-3 kontak md:mb-3">Kontak Kami</h5>
                     <div class="flex sosmed" id="sosmed">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path
