--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
     </div>
 
     <div class="container organization">
-        <div class="row text-center">
+        <div class="text-center row">
             <div class="col-lg-8"></div>
             <div class="col-lg-4">
                 <h1 class="">Organization <span>Structure</span> </h1>
@@ -119,64 +119,29 @@
             </div>
         </div>
         <div class="mt-5">
-
-            <!-- <div class="row text-center">
-                <div class="col-md-12 mb-12">
-                    <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
-                    <h4>Atha</h4>
-                    <p>Chief of Panorma Binus Malang</p>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="row text-center">
-                    <div class="col-md-3 mb-3">
-                        <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
-                        <h4>Atha</h4>
-                        <p>Chief of Panorma Binus Malang</p>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
-                        <h4>Atha</h4>
-                        <p>Chief of Panorma Binus Malang</p>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
-                        <h4>Atha</h4>
-                        <p>Chief of Panorma Binus Malang</p>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <img src="images/atha.png" width="178" class="mx-auto" height="178" alt="">
-                        <h4>Atha</h4>
-                        <p>Chief of Panorma Binus Malang</p>
-                    </div>
-                </div>
-            </div> -->
-
-          
-
-            <div class="text-center col-md-3 mb-3 mx-auto d-block">
-                <img src="images/atha.png" width="178px" class="img-fluid mx-auto "alt="">
+            <div class="mx-auto mb-3 text-center col-md-3 d-block">
+                <img src="images/atha.png" width="178px" class="mx-auto img-fluid " alt="">
                 <h4>Atha</h4>
                 <p>Chief of Panorma Binus Malang</p>
             </div>
             <div class="mt-5 row">
-                <div class="text-center col-md-3 mb-3 d-block">
-                    <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
+                <div class="mb-3 text-center col-md-3 d-block">
+                    <img src="images/atha.png" width="178" class="mx-auto img-fluid" alt="">
                     <h4>Leonardo Wijaya</h4>
                     <p>Chief of Photography Division </p>
                 </div>
-                <div class="text-center col-md-3 mb-3 d-block">
-                    <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
+                <div class="mb-3 text-center col-md-3 d-block">
+                    <img src="images/atha.png" width="178" class="mx-auto img-fluid" alt="">
                     <h4>Rhemzy Putra M</h4>
                     <p>Chief of Illustrator Division </p>
                 </div>
-                <div class="text-center col-md-3 mb-3 d-block">
-                    <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
+                <div class="mb-3 text-center col-md-3 d-block">
+                    <img src="images/atha.png" width="178" class="mx-auto img-fluid" alt="">
                     <h4>Azalea Nottingham</h4>
                     <p>Chief of Reporter Division </p>
                 </div>
-                <div class="text-center col-md-3 mb-3 d-block">
-                    <img src="images/atha.png" width="178" class="mx-auto img-fluid"  alt="">
+                <div class="mb-3 text-center col-md-3 d-block">
+                    <img src="images/atha.png" width="178" class="mx-auto img-fluid" alt="">
                     <h4>Gloria Angela</h4>
                     <p>Chief of Social Media Division </p>
                 </div>
@@ -236,20 +201,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex justify-content-end md:mb-10">
-                    <button class="px-4 py-2 font-bold text-white rounded-full md:mr-20 hover:bg-blue-700" id="btn-magazine"  >
+                <div class="d-flex justify-content-end md:mb-5">
+                    <button class="px-4 py-2 font-bold text-white rounded-full md:mr-20 hover:bg-blue-700" id="btn-magazine">
                         <a href="artikel.html" class="link-light">View More</a>
                     </button>
                 </div>
             </div>
-        
+
         </div>
     </div>
 
 
     <!-- gallery -->
-    <section class="h-screen gallery-y-72 " id="gallery">
-        <div class="py-6 ml-auto  bg-gallery">
+    <section class="" id="gallery">
+        <div class="py-6 ml-auto bg-gallery">
         </div>
         <h1 class="flex flex-col text-5xl font-bold lg:items-end xl:py-5 gallery-header md:mr-12" id="gallery-header">
             Gallery
@@ -282,7 +247,7 @@
     <!-- end -->
 
     <!-- magazine -->
-    <section class="min-h-screen mt-5 sm:mt-72 " id="magazine">
+    <section class=" md:h-screen mt-72" id="magazine">
         <h1 class="text-6xl font-bold text-center">Our Magazine</h1>
         <div class="mt-3 ml-auto mr-auto line-3"></div>
         <p class="mt-5 ml-auto mr-auto text-sm text-center md:max-w-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias rem dignissimos autem officiis repellat error tempora. consectetur adipisicing elit. </p>
@@ -319,11 +284,11 @@
     </section>
     <!-- end magazine -->
     <!-- footer -->
-    <footer class="flex mt-56 footer justify-items-start">
+    <footer class="flex mt-10 md:mt-56 footer justify-items-start">
         <div class="container" id="item-footer">
-            <div class="grid grid-flow-col gap-4 md:mt-6">
+            <div class="grid gap-4 md:grid-flow-col md:mt-6">
                 <div class="md:col-span-3">
-                    <div class="flex logo sm: justify-items-center">
+                    <div class="flex logo justify-items-center">
                         <img src="/public/images/icon_header.png" class="logo-footer">
                     </div>
                     <div class="item">
@@ -332,7 +297,7 @@
                     </div>
                 </div>
                 <div class="md:row-span-3 ">
-                    <h5 class="mt-3 font-bold text-black kontak md:mb-3">Kontak Kami</h5>
+                    <h5 class="font-bold text-black md:mt-3 kontak md:mb-3">Kontak Kami</h5>
                     <div class="flex sosmed" id="sosmed">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path
