--- a/public/artikel-detail.html
+++ b/public/artikel-detail.html
@@ -66,12 +66,14 @@
         </div>
     </header>
     <!-- navbar -->
+
+    <!-- detail-artikel -->
     <div class="artikel-detail">
         <div class="container">
             <div class="gap-2 md:grid md:grid-cols-3">
                 <div class="w-full col-span-2 md:grid">
                     <div class="mt-5 text-5xl font-bold header-title">Event Panorama Pada Tahun Ajaran Baru</div>
-                    <img src="/public/images/artikel3.jpg" class="w-full rounded-xl">
+                    <img src="/public/images/artikel3.jpg" class="w-full mt-5 rounded-xl">
                     <div class="mt-5 text-sm caption">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, quasi dicta! Possimus sed earum minima eligendi quo vero odit non, laudantium iusto illum atque fugit quas quaerat aliquid necessitatibus quibusdam. Lorem ipsum, dolor sit amet consectetur
                         adipisicing elit. Nesciunt eum, consequatur ullam maiores cumque ipsam eius asperiores animi magni nemo accusantium doloribus dolorem laborum dolore distinctio dolorum ipsum quae debitis!
