perbaikan di index artikel

--- a/public/index.html
+++ b/public/index.html
@@ -152,10 +152,10 @@
     <div class="artikel" id="artikel">
         <div class="mx-auto sm:containe artikel-bg">
             <div class="object-cover w-full min-h-screen bg-cover" style="background-image: url('/public/images/wave.png') ">
-                <div id="judul" class="text-5xl font-bold text-white md:py-20 md:px-20 judul">Whats Going On ?
+                <div id="judul" class="mt-5 text-5xl font-bold text-white md:px-20 judul md:py-16">Whats Going On ?
                     <div class="line-custom"></div>
                 </div>
-                <div class="flex flex-col items-start p-5 -mt-20 md:flex-row">
+                <div class="flex flex-col items-start p-5 md:flex-row">
                     <div class="w-full mb-20 md:w-1/4 md:mx-5" id="card-artikel">
                         <div class="overflow-hidden shadow-lg card-artikel">
                             <img class="object-cover object-center w-full h-56 " src="/public/images/a-1.jpg" alt="Mountain">
