--- a/public/index.html
+++ b/public/index.html
@@ -213,11 +213,19 @@
 
     <!-- gallery -->
     <section class="" id="gallery">
-        <div class="py-6 ml-auto bg-gallery">
+        <!-- <div class="py-6 ml-auto bg-gallery">
         </div>
         <h1 class="flex flex-col text-5xl font-bold lg:items-end xl:py-5 gallery-header md:mr-12" id="gallery-header">
             Gallery
-        </h1>
+        </h1> -->
+
+        <div class="kata-gallery md:flex justify-items-end md:w-80 py-6 ml-auto" >
+            <img src="images/kata-gallery.png"  alt="">
+            <h1 class="sm:text-5xl font-bold gallery-header" id="gallery-header">
+                Gallerywdadawd
+            </h1> 
+        </div>
+
         <div class=" line-2"></div>
         <!-- foto -->
         <div class="flex items-center justify-center foto">
@@ -252,7 +260,7 @@
         <p class="mt-5 ml-auto mr-auto text-sm text-center md:max-w-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias rem dignissimos autem officiis repellat error tempora. consectetur adipisicing elit. </p>
         <!-- list-magazine -->
         <div class="flex items-center justify-center foto">
-            <div class="grid gap-16 p-5 md:mt-20 sm:mx-40 sm:px-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+            <div class="grid gap-16 p-5 md:mt-20 sm:mx-10 sm:px-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
                 <div class="w-full">
                     <img src="/public/images/majalah1.png" alt="" class="object-cover object-center w-full h-72" id="list-magazine">
                     <p class="mt-3 text-sm font-bold text-center text-black">Vol.2<br> Brand New You
